// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot organization 1`] = `
<div>
  <div
    class="scroll-div"
  >
    <div
      style="background-color: rgb(255, 255, 255); padding: 10px;"
    >
      <div>
        <div
          style="display: flex; flex-direction: row; margin: 10px;"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-mocked-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0 css-mocked-MuiGrid2-root"
            >
              <div
                aria-autocomplete="list"
                aria-busy="false"
                aria-controls="rw_2_listbox"
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rw_2_listbox"
                aria-readonly="false"
                class="form-dropdown rw-dropdown-list rw-widget"
                data-intent="mouse"
                id="rw_1_input"
                role="combobox"
                style="width: 250px;"
                tabindex="-1"
              >
                <div
                  class="rw-widget-input rw-widget-picker rw-widget-container"
                  tabindex="-1"
                >
                  <div
                    class="rw-dropdown-list-input"
                  >
                    <input
                      aria-hidden="true"
                      class="rw-detect-autofill rw-sr"
                      tabindex="-1"
                      value=""
                    />
                    <input
                      autocomplete="off"
                      class="rw-dropdownlist-search"
                      size="2"
                      value=""
                    />
                    <span
                      class="rw-dropdown-list-value"
                    >
                      [object Object]
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="rw-btn rw-picker-caret"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentcolor"
                      height="1em"
                      viewBox="0 0 320 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0 css-mocked-MuiGrid2-root"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                title="Edit Organization"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                  data-testid="EditOutlinedIcon"
                  focusable="false"
                  size="20"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m14.06 9.02.92.92L5.92 19H5v-.92zM17.66 3c-.25 0-.51.1-.7.29l-1.83 1.83 3.75 3.75 1.83-1.83c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.2-.2-.45-.29-.71-.29m-3.6 3.19L3 17.25V21h3.75L17.81 9.94z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0 css-mocked-MuiGrid2-root"
            >
              <div>
                <button
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  title="Delete Organization"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                    data-testid="DeleteOutlineIcon"
                    focusable="false"
                    size="20"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row css-mocked-MuiGrid2-root"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0 css-mocked-MuiGrid2-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                tabindex="0"
                title="Refresh Organizations"
                type="button"
              >
                <span
                  class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-mocked-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                    data-testid="RefreshIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
                    />
                  </svg>
                </span>
                Refresh
              </button>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-0 css-mocked-MuiGrid2-root"
            >
              <button
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-mocked-MuiButtonBase-root-MuiButton-root"
                tabindex="0"
                title="Add Organization"
                type="button"
              >
                <span
                  class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-mocked-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                    data-testid="AddCircleOutlineIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
                    />
                  </svg>
                </span>
                New
              </button>
            </div>
          </div>
        </div>
        <div
          class="scroll-div-org-tab"
        >
          <div
            class="accordion"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion-content css-mocked-MuiPaper-root-MuiAccordion-root"
              style="--Paper-shadow: none;"
            >
              <h3
                class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
              >
                <div
                  aria-controls="panel1a-content"
                  aria-expanded="false"
                  class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
                  id="panel1a-header"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-mocked-MuiTypography-root"
                    >
                      RSUs
                    </h6>
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                </div>
              </h3>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                  >
                    <div
                      aria-labelledby="panel1a-header"
                      class="MuiAccordion-region"
                      id="panel1a-content"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="accordion"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters accordion-content css-mocked-MuiPaper-root-MuiAccordion-root"
              style="--Paper-shadow: none;"
            >
              <h3
                class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
              >
                <div
                  aria-controls="panel1a-content"
                  aria-expanded="false"
                  class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
                  id="panel1a-header"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-mocked-MuiTypography-root"
                    >
                      Intersections
                    </h6>
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                </div>
              </h3>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                  >
                    <div
                      aria-labelledby="panel1a-header"
                      class="MuiAccordion-region"
                      id="panel1a-content"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
              style="--Paper-shadow: none;"
            >
              <h3
                class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
              >
                <div
                  aria-controls="panel1a-content"
                  aria-expanded="false"
                  class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
                  id="panel1a-header"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-h6 css-mocked-MuiTypography-root"
                    >
                      Users
                    </h6>
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                </div>
              </h3>
              <div
                class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
                style="min-height: 0px;"
              >
                <div
                  class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
                  >
                    <div
                      aria-labelledby="panel1a-header"
                      class="MuiAccordion-region"
                      id="panel1a-content"
                      role="region"
                    >
                      <div
                        class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot rsu 1`] = `
<div>
  <div
    class="scroll-div"
  >
    <div>
      <div
        class="scroll-div-tab"
      >
        <div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
            style="position: relative;"
          >
            <div
              class="makeStyles-toolbarWrapper-1"
            >
              <div
                class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-mocked-MuiToolbar-root"
              >
                
                <div
                  class="MuiFormControl-root MuiTextField-root css-mocked-MuiFormControl-root-MuiTextField-root"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd css-mocked-MuiInputBase-root-MuiInput-root"
                  >
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-mocked-MuiInputAdornment-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                      <svg
                        aria-hidden="true"
                        aria-label="Search"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mocked-MuiSvgIcon-root"
                        data-mui-internal-clone-element="true"
                        data-testid="search"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                        />
                      </svg>
                    </div>
                    <input
                      aria-label="Search"
                      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-mocked-MuiInputBase-input-MuiInput-input"
                      id="mui-11"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-mocked-MuiInputAdornment-root"
                    >
                      <button
                        aria-label="Clear Search"
                        class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label="clear"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mocked-MuiSvgIcon-root"
                          data-testid="clear"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-15k1nh5"
                />
                <div
                  class="MuiBox-root css-p9qzma"
                >
                  <div>
                    <div
                      style="display: flex;"
                    >
                      <span>
                        <div
                          style="display: flex;"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-mocked-MuiButton-startIcon"
                            />
                            <p
                              class="MuiTypography-root MuiTypography-body1 capital-case museo-slab css-mocked-MuiTypography-root"
                            >
                              Refresh Data
                            </p>
                          </button>
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-mocked-MuiButton-startIcon"
                            />
                            <p
                              class="MuiTypography-root MuiTypography-body1 capital-case museo-slab css-mocked-MuiTypography-root"
                            >
                              Add New RSU
                            </p>
                          </button>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-187halg"
            >
              <div>
                <div
                  style="overflow-y: auto;"
                >
                  <div>
                    <table
                      class="MuiTable-root css-mocked-MuiTable-root"
                      style="table-layout: fixed;"
                    >
                      <thead
                        class="MuiTableHead-root css-mocked-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingNone MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); width: 48px;"
                          >
                            <span
                              class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                            >
                              <input
                                class="PrivateSwitchBase-input css-1m9pwf3"
                                data-indeterminate="false"
                                type="checkbox"
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                                data-testid="CheckBoxOutlineBlankIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                              <span
                                class="MuiTouchRipple-root css-mocked-MuiTouchRipple-root"
                              />
                            </span>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="0"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="0"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Milepost
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="1"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="1"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                IP Address
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="2"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="2"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Primary Route
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="3"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="3"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                RSU Model
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="4"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="4"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Serial Number
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            scope="col"
                            style="text-align: center; background-color: rgb(255, 255, 255); width: 96px; box-sizing: border-box;"
                          >
                            <span
                              aria-disabled="true"
                              class="MuiButtonBase-root Mui-disabled MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                              role="button"
                              tabindex="-1"
                            >
                              Actions
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-mocked-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root css-mocked-MuiTableRow-root"
                          style="height: 245px;"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            colspan="7"
                            style="padding-top: 0px; padding-bottom: 0px; text-align: center;"
                          >
                            No records to display
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
            <table
              class="MuiTable-root css-mocked-MuiTable-root"
            >
              <tfoot
                class="MuiTableFooter-root css-mocked-MuiTableFooter-root"
                style="display: grid;"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-footer css-mocked-MuiTableRow-root"
                  style="display: grid;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-footer MuiTableCell-sizeMedium MuiTablePagination-root css-mocked-MuiTableCell-root-MuiTablePagination-root"
                    colspan="3"
                  >
                    <div
                      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-mocked-MuiToolbar-root-MuiTablePagination-toolbar"
                    >
                      <div
                        class="MuiTablePagination-spacer css-mocked-MuiTablePagination-spacer"
                      />
                      <p
                        class="MuiTablePagination-selectLabel css-mocked-MuiTablePagination-selectLabel"
                        id="mui-9"
                      >
                        Rows per page:
                      </p>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-input css-mocked-MuiInputBase-root-MuiTablePagination-select"
                      >
                        <div
                          aria-controls="mui-3"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="mui-9 mui-8"
                          class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-mocked-MuiSelect-select-MuiInputBase-input"
                          id="mui-8"
                          role="combobox"
                          tabindex="0"
                        >
                          <div
                            class="MuiBox-root css-c8mw91"
                          >
                            5 rows 
                          </div>
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput css-mocked-MuiSelect-nativeInput"
                          tabindex="-1"
                          value="5"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-mocked-MuiSvgIcon-root-MuiSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                      <p
                        class="MuiTablePagination-displayedRows css-mocked-MuiTablePagination-displayedRows"
                      >
                        0–0 of 0
                      </p>
                      <div
                        class="MuiBox-root css-lm78jv"
                      >
                        <span
                          aria-label="First Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="First Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="first_page"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                              />
                            </svg>
                          </button>
                        </span>
                        <span
                          aria-label="Previous Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Previous Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="chevron_left"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                              />
                            </svg>
                          </button>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-caption css-mocked-MuiTypography-root"
                          style="flex: 1; text-align: center; align-self: center; flex-basis: inherit;"
                        >
                          0-0 of 0
                        </span>
                        <span
                          aria-label="Next Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Next Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="chevron_right"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </button>
                        </span>
                        <span
                          aria-label="Last Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Last Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="last_page"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot user 1`] = `
<div>
  <div
    class="scroll-div"
  >
    <div>
      <div
        class="scroll-div-tab"
      >
        <div>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
            style="position: relative;"
          >
            <div
              class="makeStyles-toolbarWrapper-3"
            >
              <div
                class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-mocked-MuiToolbar-root"
              >
                
                <div
                  class="MuiFormControl-root MuiTextField-root css-mocked-MuiFormControl-root-MuiTextField-root"
                >
                  <div
                    class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd css-mocked-MuiInputBase-root-MuiInput-root"
                  >
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-mocked-MuiInputAdornment-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                      <svg
                        aria-hidden="true"
                        aria-label="Search"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mocked-MuiSvgIcon-root"
                        data-mui-internal-clone-element="true"
                        data-testid="search"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                        />
                      </svg>
                    </div>
                    <input
                      aria-label="Search"
                      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-mocked-MuiInputBase-input-MuiInput-input"
                      id="mui-26"
                      placeholder="Search"
                      type="text"
                      value=""
                    />
                    <div
                      class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-mocked-MuiInputAdornment-root"
                    >
                      <button
                        aria-label="Clear Search"
                        class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          aria-label="clear"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mocked-MuiSvgIcon-root"
                          data-testid="clear"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-15k1nh5"
                />
                <div
                  class="MuiBox-root css-p9qzma"
                >
                  <div>
                    <div
                      style="display: flex;"
                    >
                      <span>
                        <div
                          style="display: flex;"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-mocked-MuiButton-startIcon"
                            />
                            <p
                              class="MuiTypography-root MuiTypography-body1 capital-case museo-slab css-mocked-MuiTypography-root"
                            >
                              Refresh Data
                            </p>
                          </button>
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-mocked-MuiButton-startIcon"
                            />
                            <p
                              class="MuiTypography-root MuiTypography-body1 capital-case museo-slab css-mocked-MuiTypography-root"
                            >
                              Add New User
                            </p>
                          </button>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-187halg"
            >
              <div>
                <div
                  style="overflow-y: auto;"
                >
                  <div>
                    <table
                      class="MuiTable-root css-mocked-MuiTable-root"
                      style="table-layout: fixed;"
                    >
                      <thead
                        class="MuiTableHead-root css-mocked-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingNone MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); width: 48px;"
                          >
                            <span
                              class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                            >
                              <input
                                class="PrivateSwitchBase-input css-1m9pwf3"
                                data-indeterminate="false"
                                type="checkbox"
                              />
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                                data-testid="CheckBoxOutlineBlankIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                                />
                              </svg>
                              <span
                                class="MuiTouchRipple-root css-mocked-MuiTouchRipple-root"
                              />
                            </span>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-7"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="0"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="0"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                First Name
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-7"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="1"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="1"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Last Name
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-7"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="2"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="2"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Email
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="background-color: rgb(255, 255, 255); box-sizing: border-box;"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-7"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="3"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="3"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Super User
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-paddingCheckbox MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            scope="col"
                            style="text-align: center; background-color: rgb(255, 255, 255); width: 96px; box-sizing: border-box;"
                          >
                            <span
                              aria-disabled="true"
                              class="MuiButtonBase-root Mui-disabled MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                              role="button"
                              tabindex="-1"
                            >
                              Actions
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-mocked-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root css-mocked-MuiTableRow-root"
                          style="height: 245px;"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            colspan="6"
                            style="padding-top: 0px; padding-bottom: 0px; text-align: center;"
                          >
                            No records to display
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
            <table
              class="MuiTable-root css-mocked-MuiTable-root"
            >
              <tfoot
                class="MuiTableFooter-root css-mocked-MuiTableFooter-root"
                style="display: grid;"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-footer css-mocked-MuiTableRow-root"
                  style="display: grid;"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-footer MuiTableCell-sizeMedium MuiTablePagination-root css-mocked-MuiTableCell-root-MuiTablePagination-root"
                    colspan="3"
                  >
                    <div
                      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-mocked-MuiToolbar-root-MuiTablePagination-toolbar"
                    >
                      <div
                        class="MuiTablePagination-spacer css-mocked-MuiTablePagination-spacer"
                      />
                      <p
                        class="MuiTablePagination-selectLabel css-mocked-MuiTablePagination-selectLabel"
                        id="mui-24"
                      >
                        Rows per page:
                      </p>
                      <div
                        class="MuiInputBase-root MuiInputBase-colorPrimary MuiTablePagination-input css-mocked-MuiInputBase-root-MuiTablePagination-select"
                      >
                        <div
                          aria-controls="mui-18"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="mui-24 mui-23"
                          class="MuiSelect-select MuiTablePagination-select MuiSelect-standard MuiInputBase-input css-mocked-MuiSelect-select-MuiInputBase-input"
                          id="mui-23"
                          role="combobox"
                          tabindex="0"
                        >
                          <div
                            class="MuiBox-root css-c8mw91"
                          >
                            5 rows 
                          </div>
                        </div>
                        <input
                          aria-hidden="true"
                          class="MuiSelect-nativeInput css-mocked-MuiSelect-nativeInput"
                          tabindex="-1"
                          value="5"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiTablePagination-selectIcon MuiSelect-iconStandard css-mocked-MuiSvgIcon-root-MuiSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                      <p
                        class="MuiTablePagination-displayedRows css-mocked-MuiTablePagination-displayedRows"
                      >
                        0–0 of 0
                      </p>
                      <div
                        class="MuiBox-root css-lm78jv"
                      >
                        <span
                          aria-label="First Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="First Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="first_page"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                              />
                            </svg>
                          </button>
                        </span>
                        <span
                          aria-label="Previous Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Previous Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="chevron_left"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                              />
                            </svg>
                          </button>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-caption css-mocked-MuiTypography-root"
                          style="flex: 1; text-align: center; align-self: center; flex-basis: inherit;"
                        >
                          0-0 of 0
                        </span>
                        <span
                          aria-label="Next Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Next Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="chevron_right"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                              />
                            </svg>
                          </button>
                        </span>
                        <span
                          aria-label="Last Page"
                          class=""
                          data-mui-internal-clone-element="true"
                        >
                          <button
                            aria-label="Last Page"
                            class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mocked-MuiButtonBase-root-MuiIconButton-root"
                            disabled=""
                            tabindex="-1"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="last_page"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                              />
                            </svg>
                          </button>
                        </span>
                      </div>
                    </div>
                  </td>
                </tr>
              </tfoot>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
